<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pixelcat_gradient">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/composeAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/composeToolBar"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/compose_new_post">

            <Button
                    android:id="@+id/composeShareButton"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="16dp"
                    android:text="@string/compose_action_share" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorSurface"
            android:orientation="vertical"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/composeAppBar">

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/composeImages"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/composeAppBar" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/composeDescriptionInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:hint="@string/compose_write_caption"
                app:layout_constraintTop_toBottomOf="@+id/loginImageView">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/composeDescriptionInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/composeNsfwSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/compose_contains_nsfw_media"
                android:textColor="?android:textColorSecondary" />

        <TextView
                android:id="@+id/composeVisibilityButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                tools:text="@string/compose_visibility" />

    </LinearLayout>

    <LinearLayout
            android:id="@+id/composeVisibilityBottomSheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_bottom_sheet"
            android:elevation="12dp"
            android:orientation="vertical"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
                android:id="@+id/composeVisibilityPublic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/compose_visibility_public" />

        <TextView
                android:id="@+id/composeVisibilityUnlisted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/compose_visibility_unlisted" />

        <TextView
                android:id="@+id/composeVisibilityFollowers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/compose_visibility_followers_only" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>