<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pixelcat_gradient">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/aboutAppbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:elevation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/aboutToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/title_about"
            app:titleTextAppearance="@style/TextAppearanceToolbar"
            app:titleTextColor="#fff" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/aboutImageView"
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_cat" />

            <TextView
                android:id="@+id/aboutAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#fff"
                android:textSize="24sp"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aboutAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                tools:text="Version 1.0" />

            <TextView
                android:id="@+id/aboutLicense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:lineSpacingMultiplier="1.2"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/about_license_description"
                android:textAlignment="center"
                android:textColor="#fff" />

            <Button
                android:id="@+id/aboutLicensesButton"
                style="@style/WhiteButton.Outlined"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/title_licenses" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>