<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:orientation="vertical">

    <ImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:importantForAccessibility="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/profileStatuses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/profileImage"
            app:layout_constraintEnd_toStartOf="@id/profileFollowing"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            app:layout_constraintTop_toTopOf="@id/profileImage">

        <TextView
                android:id="@+id/profileStatusesTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="3000" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/title_posts" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/profileFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/profileImage"
            app:layout_constraintEnd_toStartOf="@id/profileFollowers"
            app:layout_constraintStart_toEndOf="@id/profileStatuses"
            app:layout_constraintTop_toTopOf="@id/profileImage">

        <TextView
                android:id="@+id/profileFollowingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                tools:text="500" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/title_following" />
    </LinearLayout>

    <LinearLayout
            android:id="@+id/profileFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@id/profileImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profileFollowing"
            app:layout_constraintTop_toTopOf="@id/profileImage">

        <TextView
                android:id="@+id/profileFollowersTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textStyle="bold"
                tools:text="1,234" />

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="6dp"
                android:text="@string/title_followers" />
    </LinearLayout>

    <TextView
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            tools:text="Hi I am a placeholder text" />

    <androidx.emoji.widget.EmojiAppCompatTextView
            android:id="@+id/profileNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@id/profileName"
            tools:text="Hi I am a placeholder text" />

    <Button
            android:id="@+id/profileFollowButton"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/profile_action_follow"
            app:layout_constraintEnd_toStartOf="@id/profileMessageButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profileNote" />

    <Button
            android:id="@+id/profileMessageButton"
            style="@style/WhiteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/profile_action_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profileFollowButton"
            app:layout_constraintTop_toBottomOf="@id/profileNote" />

    <TextView
            android:id="@+id/profileFollowsYouText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:text="@string/profile_follows_you"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/profileFollowButton"
            tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
